2020-07-06  Keith Marshall  <keith@users.osdn.me>

	Publish MinGW.org WSL-5.3.4 package set.

	* mingw32/mingw32-runtime.xml (mingwrt-5.3.4-dev, mingwrt-5.3.4-dll)
	(mingwrt-5.3.4-lic, mingwrt-5.3.4-man, libmingwex-5.3.4-dll-2)
	(libmingwex-5.3.4-dev, w32api-5.3.4-dev): Add references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-06-17  Keith Marshall  <keith@users.osdn.me>

	Improve support for out-of-tree catalogue generation.

	* Makefile.in: When running the testsuite, use ${abs_top_srcdir}
	references, rather than ${top_srcdir}; this is required, to ensure
	that testsuite path names are correctly resolved, when the build
	directory is not a subdirectory of ${top_srcdir}, (as is likely
	to be the case, when generating a catalogue snapshot, which is
	to be distributed with the mingw-get setup package).

2020-06-03  Keith Marshall  <keith@users.osdn.me>

	Publish MinGW.org WSL-5.3.3 package set.

	* mingw32/mingw32-runtime.xml (mingwrt-5.3.3-dev, mingwrt-5.3.3-dll)
	(mingwrt-5.3.3-lic, mingwrt-5.3.3-man, libmingwex-5.3.3-dll-2)
	(libmingwex-5.3.3-dev, w32api-5.3.3-dev): Add references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-05-28  Keith Marshall  <keith@users.osdn.me>

	Publish MinGW.org WSL-5.3.2 package set.

	* mingw32/mingw32-runtime.xml (mingwrt-5.3.2-dev, mingwrt-5.3.2-dll)
	(mingwrt-5.3.2-lic, mingwrt-5.3.2-man, libmingwex-5.3.2-dll-3)
	(libmingwex-5.3.2-dev, w32api-5.3.2-dev): Add references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-04-30  Keith Marshall  <keith@users.osdn.me>

	Publish MinGW.org WSL-5.3.1 package set.

	* mingw32/mingw32-runtime.xml (mingwrt-5.3.1-dev, mingwrt-5.3.1-dll)
	(mingwrt-5.3.1-lic, mingwrt-5.3.1-man, libmingwex-5.3.1-dll-2)
	(libmingwex-5.3.1-dev, w32api-5.3.1-dev): Add references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-03-17  Keith Marshall  <keith@users.osdn.me>

	Correct catalogue reference for mingw-get
